[gd_scene load_steps=26 format=2]

[ext_resource path="res://Worker.gd" type="Script" id=1]
[ext_resource path="res://Construction.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites_tres/painter3.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/sprites_tres/worker2.tres" type="SpriteFrames" id=4]
[ext_resource path="res://ControlPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://ConstructionSprite.gd" type="Script" id=6]
[ext_resource path="res://House.gd" type="Script" id=7]
[ext_resource path="res://xp.jpg" type="Texture" id=8]
[ext_resource path="res://Node2D.gd" type="Script" id=9]
[ext_resource path="res://assets/sprites_tres/worker1.tres" type="SpriteFrames" id=10]
[ext_resource path="res://assets/sprites_tres/worker3.tres" type="SpriteFrames" id=11]
[ext_resource path="res://assets/constructions/spritesheet-bricks-2.png" type="Texture" id=12]
[ext_resource path="res://assets/constructions/spritesheet-paint-2.png" type="Texture" id=13]
[ext_resource path="res://assets/constructions/spritesheet-paint.png" type="Texture" id=14]
[ext_resource path="res://assets/constructions/spritesheet-bricks.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites_tres/painter1.tres" type="SpriteFrames" id=16]
[ext_resource path="res://assets/workers/painter1.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites_tres/painter2.tres" type="SpriteFrames" id=18]
[ext_resource path="res://assets/workers/worker2.png" type="Texture" id=19]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 100, 125 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 100, 0, 100, 125 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 80, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 80, 0, 80, 150 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
position = Vector2( -91.1139, -139.849 )
scale = Vector2( 1.55706, 1.55706 )
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 41.6874
margin_top = 82.3725
margin_right = 3881.69
margin_bottom = 2242.37
rect_scale = Vector2( 0.179644, 0.179644 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House" type="Node2D" parent="."]
position = Vector2( 85.7717, 74.4433 )
scale = Vector2( 1.66003, 1.66003 )
script = ExtResource( 7 )

[node name="BuildFloor1" type="Node2D" parent="House"]
visible = false
script = ExtResource( 2 )
workers_speed = PoolIntArray( 10, 15, 18 )

[node name="ConstructionSprite" type="Sprite" parent="House/BuildFloor1"]
position = Vector2( 67.7302, 175.547 )
scale = Vector2( 0.197551, 0.197551 )
texture = ExtResource( 15 )
vframes = 4
script = ExtResource( 6 )

[node name="Worker1" type="AnimatedSprite" parent="House/BuildFloor1"]
position = Vector2( 105.169, 193.437 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 10 )
script = ExtResource( 1 )

[node name="Worker2" type="AnimatedSprite" parent="House/BuildFloor1"]
position = Vector2( 37.0684, 202.317 )
scale = Vector2( 0.369563, 0.369563 )
frames = SubResource( 4 )
script = ExtResource( 1 )

[node name="Worker3" type="AnimatedSprite" parent="House/BuildFloor1"]
position = Vector2( 69.1175, 185.256 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 11 )
script = ExtResource( 1 )

[node name="ControlPanel" parent="House/BuildFloor1" instance=ExtResource( 5 )]
margin_left = 152.925
margin_top = 146.845
margin_right = 442.925
margin_bottom = 295.845
rect_scale = Vector2( 0.38, 0.38 )
text = "Build first floor"

[node name="BuildFloor2" type="Node2D" parent="House"]
position = Vector2( 0, -80 )
script = ExtResource( 2 )
workers_speed = PoolIntArray( 10, 15, 18 )

[node name="ConstructionSprite" type="Sprite" parent="House/BuildFloor2"]
position = Vector2( 67.7302, 175.547 )
scale = Vector2( 0.197551, 0.197551 )
texture = ExtResource( 12 )
vframes = 4
script = ExtResource( 6 )

[node name="Worker1" type="AnimatedSprite" parent="House/BuildFloor2"]
position = Vector2( 104.073, 187.13 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 10 )
script = ExtResource( 1 )

[node name="Worker2" type="AnimatedSprite" parent="House/BuildFloor2"]
position = Vector2( 67.7426, 192.193 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Worker3" type="AnimatedSprite" parent="House/BuildFloor2"]
position = Vector2( 25.6762, 163.463 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 11 )
script = ExtResource( 1 )

[node name="ControlPanel" parent="House/BuildFloor2" instance=ExtResource( 5 )]
margin_left = 152.629
margin_top = 148.839
margin_right = 442.629
margin_bottom = 297.839
rect_scale = Vector2( 0.38, 0.38 )
text = "Build second floor"

[node name="PaintFloor1" type="Node2D" parent="House"]
visible = false
script = ExtResource( 2 )
workers_speed = PoolIntArray( 10, 20, 30 )

[node name="ConstructionSprite" type="Sprite" parent="House/PaintFloor1"]
position = Vector2( 67.7302, 175.547 )
scale = Vector2( 0.197551, 0.197551 )
texture = ExtResource( 14 )
vframes = 6
script = ExtResource( 6 )

[node name="Painter1" type="AnimatedSprite" parent="House/PaintFloor1"]
position = Vector2( 113.358, 202.219 )
scale = Vector2( 0.369563, 0.369563 )
frames = SubResource( 3 )
script = ExtResource( 1 )

[node name="Painter2" type="AnimatedSprite" parent="House/PaintFloor1"]
position = Vector2( 67.7426, 203.413 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 18 )
script = ExtResource( 1 )

[node name="Painter3" type="AnimatedSprite" parent="House/PaintFloor1"]
position = Vector2( 31.8663, 183.967 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 3 )
script = ExtResource( 1 )

[node name="ControlPanel" parent="House/PaintFloor1" instance=ExtResource( 5 )]
margin_left = 265.986
margin_top = 147.291
margin_right = 555.986
margin_bottom = 296.291
rect_scale = Vector2( 0.38, 0.38 )
text = "Paint second floor"

[node name="PaintFloor2" type="Node2D" parent="House"]
visible = false
position = Vector2( 0, -80 )
script = ExtResource( 2 )
workers_speed = PoolIntArray( 10, 20, 30 )

[node name="ConstructionSprite" type="Sprite" parent="House/PaintFloor2"]
position = Vector2( 67.7302, 175.547 )
scale = Vector2( 0.197551, 0.197551 )
texture = ExtResource( 13 )
vframes = 6
script = ExtResource( 6 )

[node name="Painter1" type="AnimatedSprite" parent="House/PaintFloor2"]
position = Vector2( 104.073, 185.583 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 16 )
script = ExtResource( 1 )

[node name="Painter2" type="AnimatedSprite" parent="House/PaintFloor2"]
position = Vector2( 76.254, 188.711 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 18 )
script = ExtResource( 1 )

[node name="Painter3" type="AnimatedSprite" parent="House/PaintFloor2"]
position = Vector2( 34.5745, 163.076 )
scale = Vector2( 0.369563, 0.369563 )
frames = ExtResource( 3 )
script = ExtResource( 1 )

[node name="ControlPanel" parent="House/PaintFloor2" instance=ExtResource( 5 )]
margin_left = 265.663
margin_top = 148.839
margin_right = 555.663
margin_bottom = 297.839
rect_scale = Vector2( 0.38, 0.38 )
text = "Paint second floor"
